using UnityEngine;
using UnityEditor;
using UnityEditor.Animations;

/// <summary>
/// RecrÃ©e complÃ¨tement l'Animator Controller avec une configuration simple qui fonctionne
/// Menu: LockIn > REBUILD Animator Controller
/// </summary>
public class RebuildAnimatorController : EditorWindow
{
    [MenuItem("LockIn/REBUILD Animator Controller NOW!")]
    public static void RebuildController()
    {
        Debug.Log("=== RECONSTRUCTION ANIMATOR CONTROLLER ===\n");

        // Trouver les animations
        AnimationClip idleClip = FindAnimationClip("idle1");
        AnimationClip walkClip = FindAnimationClip("walk2");
        AnimationClip runClip = FindAnimationClip("run1");

        if (idleClip == null || walkClip == null || runClip == null)
        {
            EditorUtility.DisplayDialog(
                "Erreur",
                "Impossible de trouver les animations!\n\n" +
                $"Idle: {(idleClip != null ? "âœ…" : "âŒ")}\n" +
                $"Walk: {(walkClip != null ? "âœ…" : "âŒ")}\n" +
                $"Run: {(runClip != null ? "âœ…" : "âŒ")}",
                "OK"
            );
            return;
        }

        Debug.Log($"âœ… Animations trouvÃ©es:");
        Debug.Log($"  â€¢ Idle: {idleClip.name}");
        Debug.Log($"  â€¢ Walk: {walkClip.name}");
        Debug.Log($"  â€¢ Run: {runClip.name}\n");

        // Trouver ou crÃ©er l'Animator Controller
        string controllerPath = "Assets/MonsterMutant 7/MonsterMutant7 Animator Controller.controller";
        AnimatorController controller = AssetDatabase.LoadAssetAtPath<AnimatorController>(controllerPath);

        if (controller == null)
        {
            Debug.LogError($"Controller non trouvÃ© Ã : {controllerPath}");
            return;
        }

        Debug.Log($"âœ… Controller trouvÃ©: {controller.name}\n");

        // SUPPRIMER TOUT ET RECOMMENCER
        Debug.Log("ğŸ—‘ï¸ Nettoyage de l'ancien controller...");
        
        // Supprimer tous les layers sauf le premier
        while (controller.layers.Length > 1)
        {
            controller.RemoveLayer(1);
        }

        // Nettoyer le layer de base
        var baseLayer = controller.layers[0];
        var stateMachine = baseLayer.stateMachine;

        // Supprimer tous les Ã©tats
        foreach (var state in stateMachine.states)
        {
            stateMachine.RemoveState(state.state);
        }

        // Supprimer tous les paramÃ¨tres
        foreach (var param in controller.parameters)
        {
            controller.RemoveParameter(param);
        }

        Debug.Log("âœ… Controller nettoyÃ©\n");

        // CRÃ‰ER LES PARAMÃˆTRES
        Debug.Log("ğŸ›ï¸ CrÃ©ation des paramÃ¨tres...");
        controller.AddParameter("Speed", AnimatorControllerParameterType.Float);
        controller.AddParameter("IsWalking", AnimatorControllerParameterType.Bool);
        controller.AddParameter("IsRunning", AnimatorControllerParameterType.Bool);
        Debug.Log("âœ… ParamÃ¨tres crÃ©Ã©s: Speed, IsWalking, IsRunning\n");

        // CRÃ‰ER LES Ã‰TATS
        Debug.Log("ğŸ“Š CrÃ©ation des Ã©tats...");
        
        var idleState = stateMachine.AddState("Idle", new Vector3(300, 0, 0));
        idleState.motion = idleClip;
        idleState.speed = 1f;
        Debug.Log($"âœ… Ã‰tat Idle crÃ©Ã© avec {idleClip.name}");

        var walkState = stateMachine.AddState("Walk", new Vector3(300, 100, 0));
        walkState.motion = walkClip;
        walkState.speed = 1f;
        Debug.Log($"âœ… Ã‰tat Walk crÃ©Ã© avec {walkClip.name}");

        var runState = stateMachine.AddState("Run", new Vector3(300, 200, 0));
        runState.motion = runClip;
        runState.speed = 1f;
        Debug.Log($"âœ… Ã‰tat Run crÃ©Ã© avec {runClip.name}\n");

        // DÃ‰FINIR IDLE COMME Ã‰TAT PAR DÃ‰FAUT
        stateMachine.defaultState = idleState;
        Debug.Log("âœ… Idle dÃ©fini comme Ã©tat par dÃ©faut\n");

        // CRÃ‰ER LES TRANSITIONS
        Debug.Log("ğŸ”„ CrÃ©ation des transitions...");

        // IDLE â†’ WALK
        var idleToWalk = idleState.AddTransition(walkState);
        idleToWalk.hasExitTime = false;
        idleToWalk.exitTime = 0;
        idleToWalk.duration = 0.15f;
        idleToWalk.AddCondition(AnimatorConditionMode.If, 0, "IsWalking");
        idleToWalk.AddCondition(AnimatorConditionMode.IfNot, 0, "IsRunning");
        Debug.Log("  âœ… Idle â†’ Walk (si IsWalking=true ET IsRunning=false)");

        // IDLE â†’ RUN
        var idleToRun = idleState.AddTransition(runState);
        idleToRun.hasExitTime = false;
        idleToRun.exitTime = 0;
        idleToRun.duration = 0.15f;
        idleToRun.AddCondition(AnimatorConditionMode.If, 0, "IsRunning");
        Debug.Log("  âœ… Idle â†’ Run (si IsRunning=true)");

        // WALK â†’ IDLE
        var walkToIdle = walkState.AddTransition(idleState);
        walkToIdle.hasExitTime = false;
        walkToIdle.exitTime = 0;
        walkToIdle.duration = 0.15f;
        walkToIdle.AddCondition(AnimatorConditionMode.IfNot, 0, "IsWalking");
        walkToIdle.AddCondition(AnimatorConditionMode.IfNot, 0, "IsRunning");
        Debug.Log("  âœ… Walk â†’ Idle (si IsWalking=false ET IsRunning=false)");

        // WALK â†’ RUN
        var walkToRun = walkState.AddTransition(runState);
        walkToRun.hasExitTime = false;
        walkToRun.exitTime = 0;
        walkToRun.duration = 0.15f;
        walkToRun.AddCondition(AnimatorConditionMode.If, 0, "IsRunning");
        Debug.Log("  âœ… Walk â†’ Run (si IsRunning=true)");

        // RUN â†’ IDLE
        var runToIdle = runState.AddTransition(idleState);
        runToIdle.hasExitTime = false;
        runToIdle.exitTime = 0;
        runToIdle.duration = 0.15f;
        runToIdle.AddCondition(AnimatorConditionMode.IfNot, 0, "IsRunning");
        runToIdle.AddCondition(AnimatorConditionMode.IfNot, 0, "IsWalking");
        Debug.Log("  âœ… Run â†’ Idle (si IsRunning=false ET IsWalking=false)");

        // RUN â†’ WALK
        var runToWalk = runState.AddTransition(walkState);
        runToWalk.hasExitTime = false;
        runToWalk.exitTime = 0;
        runToWalk.duration = 0.15f;
        runToWalk.AddCondition(AnimatorConditionMode.If, 0, "IsWalking");
        runToWalk.AddCondition(AnimatorConditionMode.IfNot, 0, "IsRunning");
        Debug.Log("  âœ… Run â†’ Walk (si IsWalking=true ET IsRunning=false)");

        Debug.Log("");

        // SAUVEGARDER
        EditorUtility.SetDirty(controller);
        AssetDatabase.SaveAssets();
        AssetDatabase.Refresh();

        Debug.Log("ğŸ’¾ Controller sauvegardÃ©!");
        Debug.Log("\nâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•");
        Debug.Log("âœ… RECONSTRUCTION TERMINÃ‰E!");
        Debug.Log("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

        // VÃ©rifier que le monstre a ce controller
        MonsterAI[] monsters = FindObjectsByType<MonsterAI>(FindObjectsSortMode.None);
        if (monsters.Length > 0)
        {
            foreach (var monster in monsters)
            {
                Animator animator = monster.GetComponent<Animator>();
                if (animator != null)
                {
                    animator.runtimeAnimatorController = controller;
                    EditorUtility.SetDirty(animator);
                    Debug.Log($"âœ… Controller assignÃ© au monstre: {monster.name}");
                }
            }
        }

        EditorUtility.DisplayDialog(
            "âœ… SUCCÃˆS!",
            "L'Animator Controller a Ã©tÃ© complÃ¨tement reconstruit!\n\n" +
            "Configuration:\n" +
            "â€¢ Ã‰tats: Idle, Walk, Run\n" +
            "â€¢ Animations assignÃ©es et en loop\n" +
            "â€¢ Transitions rapides (0.15s)\n" +
            "â€¢ Conditions correctes\n" +
            "â€¢ Pas d'Exit Time\n\n" +
            "ğŸ® TESTEZ MAINTENANT EN PLAY MODE!\n\n" +
            "Le monstre devrait animer correctement!",
            "TESTER!"
        );
    }

    static AnimationClip FindAnimationClip(string partialName)
    {
        string[] guids = AssetDatabase.FindAssets($"MutantMonster2@{partialName}");
        
        foreach (string guid in guids)
        {
            string path = AssetDatabase.GUIDToAssetPath(guid);
            
            if (path.EndsWith(".fbx"))
            {
                Object[] assets = AssetDatabase.LoadAllAssetsAtPath(path);
                
                foreach (Object asset in assets)
                {
                    if (asset is AnimationClip)
                    {
                        AnimationClip clip = asset as AnimationClip;
                        if (!clip.name.Contains("__preview__"))
                        {
                            return clip;
                        }
                    }
                }
            }
        }
        
        return null;
    }
}
